[package]
name = "zedis-cli"
version = "0.1.0"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"
repository = "https://github.com/drbh/zedis-cli"
description = "A CLI for zedis"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
colored = "1.8"
rustyline = "5.0.3"